--- a/assets/css/omega.css
+++ b/assets/css/omega.css
@@ -36,6 +36,7 @@
     width:80%;
     z-index: 20;
     height:100%;
+    overflow-y: auto;
     top:0;
     left:0;
     background-color: #ffffff;
